<resources>
    <string name="app_name">TestApplication</string>
    <string name="find_description">Определить описание</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="send_message_select">Отправить сообщение (выбрать метод)</string>
    <string name="diff_message_hint">Введите сообщение</string>
    <string name="send_question">Как отправить сообщение?</string>
    <string name="watch_activity">Watch Activity</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="send_message_to_android">Send Message to Android</string>
    <string name="send_message_to_new_intend">Send message to new Intend</string>
    <string name="spinner">Spinner</string>
    <string name="init_time">0:00:00</string>
    <string name="watch_adding_activity">Watch adding activity</string>
    <string name="init_timer">0:00:00</string>
    <string name="cafe_logo">Cafe Logo</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="enter_name_hint">Введите имя:</string>
    <string name="enter_password_hint">Введите пароль:</string>
    <string name="create_order">Сделать заказ</string>
    <string name="toast_text">Все значения должны быть заполнены!</string>
    <string name="hello_client">Привет, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="choose_in_drink">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="choose_drink">Выбирите вид напитка</string>
    <string name="send_order">Кнопка заказа</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="additions">Необходимые добавки: </string>
    <string name="logo_drill_shop">Логотип магазина инструментов</string>
    <string name="drill_logo">Логотип дрели</string>
    <string-array name="colors">
        <item>Красный</item>
        <item>Синий</item>
        <item>Голубой</item>
    </string-array>
    <string-array name="colors_descriptions">
        <item>Красный цвет - описание</item>
        <item>Синий цвет - описание</item>
        <item>Голубой цвет - описание</item>
    </string-array>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Латте</item>
        <item>Эспрессо</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>

    <string-array name="tools_list">
        <item>Дрели</item>
        <item>Перфораторы</item>
        <item>Болгарки</item>
    </string-array>

    <string-array name="main_list">
        <item>Image gallery with clicks</item>
        <item>Image gallery with button</item>
        <item>Image gallery simple</item>
        <item>Color Descriptor</item>
        <item>Messenger</item>
        <item>Messenger to Android</item>
        <item>Watch Activity</item>
        <item>Watch with rotation Phone</item>
        <item>Cafe Project</item>
        <item>Drill Shop</item>
        <item>Times table</item>
        <item>Internet data getter</item>
        <item>Empty</item>
        <item>Empty</item>
        <item>Empty</item>
        <item>Empty</item>
    </string-array>

    <string name="drill_interskol_title">Дрель Интерскол</string>
    <string name="drill_makita_title">Дрель Makita</string>
    <string name="drill_dewalt_title">Дрель DeWalt</string>

    <string name="drill_interskol_info">Подробное описание дрелей Интерскол.</string>
    <string name="drill_makita_info">Подробное описание дрелей Makita.</string>
    <string name="drill_dewalt_info">Подробное описание дрелей DeWalt.</string>
    <string name="interskol_pic">Интерскол дрель</string>
    <string name="show_html">Show HTML</string>
    <string name="show_image">Show Image</string>
</resources>