<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cacaoLight">

    <ImageView
        android:id="@+id/imageViewCafeLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"

        android:contentDescription="@string/cafe_logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/welcome_text" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:hint="@string/enter_name_hint" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:hint="@string/enter_password_hint"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:background="@color/white"
        android:textColor="@color/darkBrown"
        android:onClick="createOrder"
        android:text="@string/create_order" />
</LinearLayout>