<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cacaoLight"
    tools:context=".CreateOrderActivity">
    
    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/darkBrown"
        android:gravity="center"
        android:text="@string/hello_client"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <RadioButton
            android:id="@+id/radioTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:onClick="changeDrink"
            android:textColor="@color/white"
            android:text="@string/tea"/>

        <RadioButton
            android:id="@+id/radioCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="changeDrink"
            android:textColor="@color/white"
            android:text="@string/coffee"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_in_drink"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <CheckBox
        android:id="@+id/checkMilk"
        android:text="@string/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkSugar"/>

    <CheckBox
        android:id="@+id/checkSugar"
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChoose"
        app:layout_constraintStart_toEndOf="@id/checkMilk"
        app:layout_constraintEnd_toStartOf="@id/checkLemon"/>

    <CheckBox
        android:id="@+id/checkLemon"
        android:text="@string/lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChoose"
        app:layout_constraintStart_toEndOf="@id/checkSugar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_drink"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toBottomOf="@id/checkSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffee"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/button"
        android:contentDescription="@string/send_order"
        android:layout_margin="8dp"
        android:onClick="sendOrder"
        app:layout_constraintTop_toBottomOf="@id/spinnerTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>